<package>
  <name>slam_project</name>
  <version>1.0.0</version>
  <description>Slam Project launchers and worlds</description>
  <maintainer email="doug@douglasteeple.com">Douglas Teeple</maintainer>
  <license>BSD</license>
  <url type="website">http://douglasteeple.com</url>
  <url type="repository">https://github.com/douglasteeple/slam_project</url>
  <url type="bugtracker">https://github.com/douglasteeple/slam_project/issues</url>
  <author email="doug@douglasteeple.com">Douglas Teeple</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>kobuki_gazebo_plugins</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_description</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  <run_depend>xacro</run_depend>
</package>
